Nodes: Overlapping of Icons in a Node Group header #111832

Closed
opened 2023-09-02 19:44:31 +02:00 by Iliya Katushenock · 10 comments

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: 400f7c22bc98
Worked: Never.

Caused by: 84825e4ed2

Short description of error
Data block counter of Node Group ID and Preview Toggle button are overlapped in a header:
image

Exact steps for others to reproduce the error

  1. New Material Nodes.
  2. Create a new Node Group.
  3. Duplicate it to increase data block counter.
**Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: `400f7c22bc98` Worked: Never. Caused by: 84825e4ed2e098954f0c46adee4d65c8c0ba0e99 **Short description of error** Data block counter of Node Group ID and Preview Toggle button are overlapped in a header: ![image](/attachments/73bf17cc-8c93-4b25-a82f-a79e3a22549b) **Exact steps for others to reproduce the error** 1. New Material Nodes. 2. Create a new Node Group. 3. Duplicate it to increase data block counter.
Member

Caused by: 84825e4ed2

@dfelinto ^

> Caused by: 84825e4ed2 @dfelinto ^

I cannot reproduce with the given steps.

If I open the attached file on either 3.6 or 4.0 I don't get the "material" icon on the header of the node. What I get is:
image

I cannot reproduce with the given steps. If I open the attached file on either 3.6 or 4.0 I don't get the "material" icon on the header of the node. What I get is: ![image](/attachments/3869f9da-1397-4728-b535-7893fa81a144)
Dalai Felinto added
Type
Report
and removed
Status
Confirmed
Type
Bug
labels 2023-09-05 12:33:10 +02:00
Member

Ah, I had not verified this locally before tagging you 😅

I don't get the "material" icon on the header of the node

Experimental: shader node previews need to be enabled for that

Ah, I had not verified this locally before tagging you 😅 > I don't get the "material" icon on the header of the node `Experimental: shader node previews` need to be enabled for that

Well, Shader Node Previews (experimental feature) is at fault here then :) #110353

I wonder if @Kdaf wants to look at it. But we don't classify bugs on experimental features as bugs.


On a side note, in the future @mod_moder please refrain from tagging modules before the bug is confirmed.

Well, Shader Node Previews (experimental feature) is at fault here then :) #110353 I wonder if @Kdaf wants to look at it. But we don't classify bugs on experimental features as bugs. --- On a side note, in the future @mod_moder please refrain from tagging modules before the bug is confirmed.
Dalai Felinto removed the
Interest
Overrides
label 2023-09-05 12:42:26 +02:00
Dalai Felinto added the
Status
Archived
label 2023-09-05 12:43:15 +02:00
Member

I think the problem would still be present in the compositor previews ? Or there are no previews for groups ?

Could you check ? I don’t have blender currently.
@mod_moder

I think the problem would still be present in the compositor previews ? Or there are no previews for groups ? Could you check ? I don’t have blender currently. @mod_moder
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-09-05 13:04:06 +02:00
Author
Member

Hey, this problem is not visible until we haven't any other icons @dfelinto !
UI_but_icon_indicator_number_set(but, ID_REAL_USERS(node.id)); is not create additional offset:

4.0 3.4
image image

That is, any other will not work correctly.

As i was told, features already in the main, even experimental ones, are subject to bug reports and fixes.
This counter was added by you, i'd rather treat it as something that never worked, instead of bug of new icons.

Hey, this problem is not visible until we haven't any other icons @dfelinto ! `UI_but_icon_indicator_number_set(but, ID_REAL_USERS(node.id));` is not create additional offset: | 4.0 | 3.4 | | -- | -- | | ![image](/attachments/1a8b2c24-4074-421d-836c-a44573302a10) | ![image](/attachments/7649a3ca-7401-4dad-990b-617f90513ee3) | That is, any other will not work correctly. As i was told, features already in the main, even experimental ones, are subject to bug reports and fixes. This counter was added by you, i'd rather treat it as something that never worked, instead of bug of new icons.
3.4 KiB
3.2 KiB

I think the problem would still be present in the compositor previews ? Or there are no previews for groups ?

There are no Previews for groups in the compositor.

"(...) features already in the main, even experimental ones, are subject to bug reports and fixes".

As far as I'm concerned, this is really not the policy. If anything it is something done on a case-by-case basis.


Anyways, to focus on the issue here. It seems that the Preview Icons are disregarding the little safety square we put the numbers in.

There are a few possible solutions:

  1. Have the group icon on the right-most spot.
  2. Make sure the "safety" area is drawn on top of all the icons.
  3. Increase the padding between the icons (to match the Outliner).

The (1) is a matter of deciding which is more important: to go inside a node group, or to toggle its preview.
The (2) could be done anyways if anyone wants to contribute this.
The (3) could be done combined with (2).

I would favour trying the (2) first, and seeing if (3) is needed. It can be a topic for a User Interface module meeting.


All that said, it is not an official issue until the preview shader GSoC gets close to be merged.

> I think the problem would still be present in the compositor previews ? Or there are no previews for groups ? There are no Previews for groups in the compositor. > "(...) features already in the main, even experimental ones, are subject to bug reports and fixes". As far as I'm concerned, this is really not the policy. If anything it is something done on a case-by-case basis. --- Anyways, to focus on the issue here. It seems that the Preview Icons are disregarding the little safety square we put the numbers in. There are a few possible solutions: 1. Have the group icon on the right-most spot. 2. Make sure the "safety" area is drawn on top of all the icons. 3. Increase the padding between the icons (to match the Outliner). The (1) is a matter of deciding which is more important: to go inside a node group, or to toggle its preview. The (2) could be done anyways if anyone wants to contribute this. The (3) could be done combined with (2). I would favour trying the (2) first, and seeing if (3) is needed. It can be a topic for a User Interface module meeting. --- All that said, it is not an official issue until the preview shader GSoC gets close to be merged.
Member

@dfelinto I think number 1 is the best (and easiest) solution to this. Thanks!

@dfelinto I think number 1 is the best (and easiest) solution to this. Thanks!

@Kdaf do you think you could tackle this as part of the experimental feature? It should be trivial to change the icon order there.

@Kdaf do you think you could tackle this as part of the experimental feature? It should be trivial to change the icon order there.
Iliya Katushenock added
Interest
Nodes & Physics
and removed
Module
Nodes & Physics
labels 2023-09-05 17:21:48 +02:00
Member

@dfelinto
I dont have much time right now, I'll do that this weekend.
I think I'll try to have the remaining important patches landed during my next holidays.
I'm really not sure how much time I'll have for this.

I'll try my best (in the following days/weeks).
If anyone can fix it sooner, that would be awesome, it's not high priority.

@dfelinto I dont have much time right now, I'll do that this weekend. I think I'll try to have the remaining important patches landed during my next holidays. I'm really not sure how much time I'll have for this. I'll try my best (in the following days/weeks). If anyone can fix it sooner, that would be awesome, it's not high priority.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-08 14:22:19 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-09-11 16:50:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111832
No description provided.